chore: correct github urls

--- a/src/Xutim/Bundle/CoreBundle/composer.json
+++ b/src/Xutim/Bundle/CoreBundle/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "xutim/core-bundle",
+    "name": "xutimcms/core-bundle",
     "type": "symfony-bundle",
     "description": "The core of Xutim CMS system.",
     "keywords": [
