--- a/src/Xutim/Bundle/EventBundle/composer.json
+++ b/src/Xutim/Bundle/EventBundle/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "xutim/event-bundle",
+    "name": "xutimcms/event-bundle",
     "type": "symfony-bundle",
     "description": "The bundle adds events to the Xutim CMS system.",
     "keywords": [
