--- a/.github/workflows/split.yml
+++ b/.github/workflows/split.yml
@@ -1,7 +1,7 @@
 name: Split Packages
 
 env:
-    SSH_DEPLOY_KEY: ${{ secrets.SSH_DEPLOY_KEY }}
+    GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
 
 on:
     push:
@@ -13,17 +13,37 @@ jobs:
     split:
         runs-on: ubuntu-latest
 
+        strategy:
+            fail-fast: false
+            matrix:
+                package:
+                    - local_path: "src/Xutim/Bundle/CoreBundle"
+                      split_repository: "core-bundle"
+                    - local_path: "src/Xutim/Bundle/EventBundle"
+                      split_repository: "event-bundle"
+
         steps:
             - uses: actions/checkout@v4
               with:
                   fetch-depth: 0 # required to see full git history
 
-            - uses: symplify/monorepo-split-github-action@v3
-              env:
-                  GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+            # no tag
+            - if: "!startsWith(github.ref, 'refs/tags/')"
+              uses: symplify/monorepo-split-github-action@v3
               with:
-                  split_packages: |
-                      src/Xutim/Bundle/CoreBundle: https://x-access-token:${{ secrets.ACCESS_TOKEN }}@github.com/XutimCMS/CoreBundle.git
-                      src/Xutim/Bundle/EventBundle: https://x-access-token:${{ secrets.ACCESS_TOKEN }}@github.com/XutimCMS/EventBundle.git
+                  package_directory: "${{ matrix.package.local_path }}"
+                  repository_organization: "XutimCMS"
+                  repository_name: "${{ matrix.package.split_repository }}"
+                  user_name: "xutim-split-bot"
+                  user_email: "ci@xutim.local"
+
+            # with tag
+            - if: "startsWith(github.ref, 'refs/tags/')"
+              uses: symplify/monorepo-split-github-action@v3
+              with:
+                  tag: ${{ github.ref_name }}
+                  package_directory: "${{ matrix.package.local_path }}"
+                  repository_organization: "XutimCMS"
+                  repository_name: "${{ matrix.package.split_repository }}"
                   user_name: "xutim-ci"
                   user_email: "ci@xutim.local"
