--- a/.github/workflows/split.yml
+++ b/.github/workflows/split.yml
@@ -29,7 +29,7 @@ jobs:
 
             # no tag
             - if: "!startsWith(github.ref, 'refs/tags/')"
-              uses: symplify/monorepo-split-github-action@v3
+              uses: "symplify/monorepo-split-github-action@2.1"
               with:
                   package_directory: "${{ matrix.package.local_path }}"
                   repository_organization: "XutimCMS"
@@ -39,7 +39,7 @@ jobs:
 
             # with tag
             - if: "startsWith(github.ref, 'refs/tags/')"
-              uses: symplify/monorepo-split-github-action@v3
+              uses: "symplify/monorepo-split-github-action@2.1"
               with:
                   tag: ${{ github.ref_name }}
                   package_directory: "${{ matrix.package.local_path }}"
