--- a/.github/workflows/split.yml
+++ b/.github/workflows/split.yml
@@ -27,8 +27,10 @@ jobs:
               with:
                   fetch-depth: 0 # required to see full git history
 
-            - name: Mark current directory as safe (scoped)
-              run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
+            - name: Mark safe Git directories
+              run: |
+                  git config --global --add safe.directory "$GITHUB_WORKSPACE"
+                  git config --global --add safe.directory "/tmp/monorepo_split/build_directory"
 
             # no tag
             - if: "!startsWith(github.ref, 'refs/tags/')"
