--- a/src/Xutim/Bundle/CoreBundle/composer.json
+++ b/src/Xutim/Bundle/CoreBundle/composer.json
@@ -104,7 +104,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Xutim\\Bundle\\CoreBundle\\Tests\\": "tests/"
+            "Xutim\\CoreBundle\\Tests\\": "tests/"
         }
     },
     "minimum-stability": "dev",
