--- a/composer.json
+++ b/composer.json
@@ -101,7 +101,9 @@
         "symfony/polyfill-php80": "*",
         "symfony/polyfill-php81": "*",
         "xutimcms/core-bundle": "self.version",
-        "xutimcms/event-bundle": "self.version"
+        "xutimcms/event-bundle": "self.version",
+        "xutimcms/redirect-bundle": "self.version",
+        "xutimcms/redirect-component": "self.version"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
@@ -109,17 +111,27 @@
         "psr-4": {
             "Xutim\\": "src/Xutim/",
             "Xutim\\CoreBundle\\": "src/Xutim/Bundle/CoreBundle/src/",
-            "Xutim\\EventBundle\\": "src/Xutim/Bundle/EventBundle/src/"
+            "Xutim\\EventBundle\\": "src/Xutim/Bundle/EventBundle/src/",
+            "Xutim\\RedirectBundle\\": "src/Xutim/Bundle/RedirectBundle/src/",
+            "Xutim\\RedirectComponent\\": "src/Xutim/Component/RedirectComponent/src/"
         },
         "exclude-from-classmap": [
             "src/Xutim/Bundle/CoreBundle/Tests/",
-            "src/Xutim/Bundle/EventBundle/Tests/"
+            "src/Xutim/Bundle/EventBundle/Tests/",
+            "src/Xutim/Bundle/RedirectBundle/Tests/",
+            "src/Xutim/Bundle/RedirectCmsBridgeBundle/Tests/",
+            "src/Xutim/Component/RedirectComponent/Tests/"
         ]
     },
     "autoload-dev": {
         "psr-4": {
             "Xutim\\CoreBundle\\Tests\\": "src/Xutim/Bundle/CoreBundle/tests/",
-            "Xutim\\EventBundle\\Tests\\": "src/Xutim/Bundle/EventBundle/tests/"
+            "Xutim\\EventBundle\\Tests\\": "src/Xutim/Bundle/EventBundle/tests/",
+            "Xutim\\RedirectBundle\\Tests\\": [
+                "src/Xutim/Bundle/RedirectBundle/tests/",
+                "src/Xutim/Bundle/RedirectCmsBridgeBundle/tests/"
+            ],
+            "Xutim\\RedirectComponent\\Tests\\": "src/Xutim/Component/RedirectComponent/tests/"
         }
     },
     "config": {
