chore(phpstan): fix minor phpstan issues and remove unused vars

--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -103,7 +103,7 @@ parameters:
 			path: src/Xutim/Bundle/EventBundle/src/Form/Admin/EventType.php
 
 		-
-			message: '#^Instanceof between Xutim\\RedirectBundle\\Form\\Admin\\RedirectFormData and Xutim\\RedirectBundle\\Form\\Admin\\RedirectFormData will always evaluate to true\.$#'
+			message: '#^Instanceof between Xutim\\RedirectBundle\\Form\\RedirectFormData and Xutim\\RedirectBundle\\Form\\RedirectFormData will always evaluate to true\.$#'
 			identifier: instanceof.alwaysTrue
 			count: 1
 			path: src/Xutim/Bundle/RedirectBundle/src/Form/RedirectType.php
