--- a/src/Xutim/Bundle/CoreBundle/composer.json
+++ b/src/Xutim/Bundle/CoreBundle/composer.json
@@ -61,6 +61,7 @@
         "symfony/ux-live-component": "^2.23",
         "symfony/ux-turbo": "^2.23",
         "symfony/ux-twig-component": "^2.17",
+        "symfony/dom-crawler": "7.3.*",
         "symfony/validator": "7.3.*",
         "symfony/yaml": "7.3.*",
         "symfonycasts/dynamic-forms": "^0.1",
