--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,9 @@
         "symfony/asset": "7.3.*",
         "symfony/asset-mapper": "7.3.*",
         "symfony/console": "7.3.*",
+        "symfony/css-selector": "7.3.*",
         "symfony/doctrine-messenger": "*",
+        "symfony/dom-crawler": "7.3.*",
         "symfony/dotenv": "7.3.*",
         "symfony/flex": "^2",
         "symfony/form": "7.3.*",
@@ -40,6 +42,7 @@
         "symfony/http-client": "7.3.*",
         "symfony/intl": "7.3.*",
         "symfony/mailer": "7.3.*",
+        "symfony/mercure-bundle": "^0.3.9",
         "symfony/messenger": "7.3.*",
         "symfony/mime": "7.3.*",
         "symfony/monolog-bundle": "^3.10",
@@ -82,7 +85,6 @@
         "phpstan/phpstan-webmozart-assert": "^2.0",
         "phpunit/phpunit": "^9.6",
         "symfony/browser-kit": "7.3.*",
-        "symfony/css-selector": "7.3.*",
         "symfony/debug-bundle": "7.3.*",
         "symfony/maker-bundle": "^1.62",
         "symfony/phpunit-bridge": "7.3.*",
