--- a/composer.json
+++ b/composer.json
@@ -105,7 +105,9 @@
         "xutimcms/core-bundle": "self.version",
         "xutimcms/event-bundle": "self.version",
         "xutimcms/redirect-bundle": "self.version",
-        "xutimcms/redirect-component": "self.version"
+        "xutimcms/redirect-component": "self.version",
+        "xutimcms/security-bundle": "self.version",
+        "xutimcms/security-component": "self.version"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
@@ -115,25 +117,27 @@
             "Xutim\\CoreBundle\\": "src/Xutim/Bundle/CoreBundle/src/",
             "Xutim\\EventBundle\\": "src/Xutim/Bundle/EventBundle/src/",
             "Xutim\\RedirectBundle\\": "src/Xutim/Bundle/RedirectBundle/src/",
-            "Xutim\\RedirectComponent\\": "src/Xutim/Component/RedirectComponent/src/"
+            "Xutim\\RedirectComponent\\": "src/Xutim/Component/RedirectComponent/src/",
+            "Xutim\\SecurityBundle\\": "src/Xutim/Bundle/SecurityBundle/src/",
+            "Xutim\\SecurityComponent\\": "src/Xutim/Component/SecurityComponent/src/"
         },
         "exclude-from-classmap": [
             "src/Xutim/Bundle/CoreBundle/Tests/",
             "src/Xutim/Bundle/EventBundle/Tests/",
             "src/Xutim/Bundle/RedirectBundle/Tests/",
-            "src/Xutim/Bundle/RedirectCmsBridgeBundle/Tests/",
-            "src/Xutim/Component/RedirectComponent/Tests/"
+            "src/Xutim/Bundle/SecurityBundle/Tests/",
+            "src/Xutim/Component/RedirectComponent/Tests/",
+            "src/Xutim/Component/SecurityComponent/Tests/"
         ]
     },
     "autoload-dev": {
         "psr-4": {
             "Xutim\\CoreBundle\\Tests\\": "src/Xutim/Bundle/CoreBundle/tests/",
             "Xutim\\EventBundle\\Tests\\": "src/Xutim/Bundle/EventBundle/tests/",
-            "Xutim\\RedirectBundle\\Tests\\": [
-                "src/Xutim/Bundle/RedirectBundle/tests/",
-                "src/Xutim/Bundle/RedirectCmsBridgeBundle/tests/"
-            ],
-            "Xutim\\RedirectComponent\\Tests\\": "src/Xutim/Component/RedirectComponent/tests/"
+            "Xutim\\RedirectBundle\\Tests\\": "src/Xutim/Bundle/RedirectBundle/tests/",
+            "Xutim\\RedirectComponent\\Tests\\": "src/Xutim/Component/RedirectComponent/tests/",
+            "Xutim\\SecurityBundle\\Tests\\": "src/Xutim/Bundle/SecurityBundle/tests/",
+            "Xutim\\SecurityComponent\\Tests\\": "src/Xutim/Component/SecurityComponent/tests/"
         }
     },
     "config": {
