--- a/.github/workflows/split.yml
+++ b/.github/workflows/split.yml
@@ -29,6 +29,8 @@ jobs:
                       split_repository: 'security-bundle'
                     - local_path: 'src/Xutim/Component/SecurityComponent'
                       split_repository: 'security-component'
+                    - local_path: 'src/Xutim/Domain'
+                      split_repository: 'domain'
 
         steps:
             - uses: actions/checkout@v4
