--- a/composer.json
+++ b/composer.json
@@ -102,6 +102,7 @@
         "symfony/polyfill-php74": "*",
         "symfony/polyfill-php80": "*",
         "symfony/polyfill-php81": "*",
+        "xutim/domain": "self.version",
         "xutimcms/core-bundle": "self.version",
         "xutimcms/event-bundle": "self.version",
         "xutimcms/redirect-bundle": "self.version",
@@ -115,6 +116,7 @@
         "psr-4": {
             "Xutim\\": "src/Xutim/",
             "Xutim\\CoreBundle\\": "src/Xutim/Bundle/CoreBundle/src/",
+            "Xutim\\Domain\\": "src/Xutim/Domain/src/",
             "Xutim\\EventBundle\\": "src/Xutim/Bundle/EventBundle/src/",
             "Xutim\\RedirectBundle\\": "src/Xutim/Bundle/RedirectBundle/src/",
             "Xutim\\RedirectComponent\\": "src/Xutim/Component/RedirectComponent/src/",
