--- a/composer.json
+++ b/composer.json
@@ -70,6 +70,7 @@
         "twig/string-extra": "^3.20",
         "twig/twig": "^3.20",
         "webmozart/assert": "^1.11",
+        "xutim/domain": "dev-main",
         "xutimcms/snippet-component": "dev-main"
     },
     "require-dev": {
