--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "doctrine/doctrine-bundle": "^2.13",
         "doctrine/doctrine-migrations-bundle": "^3.4",
         "doctrine/orm": "^3.3",
+        "dragonmantank/cron-expression": "^3.4",
         "dunglas/doctrine-json-odm": "^1.4",
         "ext-ctype": "*",
         "ext-gd": "*",
@@ -70,8 +71,7 @@
         "twig/string-extra": "^3.20",
         "twig/twig": "^3.20",
         "webmozart/assert": "^1.11",
-        "xutim/domain": "dev-main",
-        "xutimcms/snippet-component": "dev-main"
+        "xutim/domain": "dev-main"
     },
     "require-dev": {
         "dama/doctrine-test-bundle": "^8.2",
