feat(analytics): Add stimulus controller auto-discovery.

--- a/src/Xutim/Bundle/AnalyticsBundle/composer.json
+++ b/src/Xutim/Bundle/AnalyticsBundle/composer.json
@@ -10,7 +10,8 @@
         "symfony",
         "analytics",
         "bundle",
-        "privacy"
+        "privacy",
+        "symfony-ux"
     ],
     "homepage": "https://xutim.com",
     "license": "MIT",
