--- a/.github/workflows/split.yml
+++ b/.github/workflows/split.yml
@@ -29,6 +29,8 @@ jobs:
                       split_repository: 'snippet-bundle'
                     - local_path: 'src/Xutim/Bundle/AnalyticsBundle'
                       split_repository: 'analytics-bundle'
+                    - local_path: 'src/Xutim/Bundle/MediaBundle'
+                      split_repository: 'media-bundle'
                     - local_path: 'src/Xutim/Domain'
                       split_repository: 'domain'
 
