--- a/.github/workflows/split.yml
+++ b/.github/workflows/split.yml
@@ -31,6 +31,8 @@ jobs:
                       split_repository: 'analytics-bundle'
                     - local_path: 'src/Xutim/Bundle/MediaBundle'
                       split_repository: 'media-bundle'
+                    - local_path: 'src/Xutim/Bundle/ResourceBundle'
+                      split_repository: 'resource-bundle'
                     - local_path: 'src/Xutim/Domain'
                       split_repository: 'domain'
 
