--- a/tests/Application/.env
+++ b/tests/Application/.env
@@ -4,3 +4,4 @@ DATABASE_URL="postgresql://postgres:postgres@127.0.0.1:5432/xutim?serverVersion=
 MERCURE_URL=http://localhost:3000/.well-known/mercure
 MERCURE_PUBLIC_URL=http://localhost:3000/.well-known/mercure
 MERCURE_JWT_SECRET=test_mercure_secret
+MAILER_DSN=null://null
