--- a/tests/Application/config/packages/web_profiler.yaml
+++ b/tests/Application/config/packages/web_profiler.yaml
@@ -3,4 +3,7 @@ web_profiler:
     intercept_redirects: false
 
 framework:
-    profiler: { collect: false }
+    profiler:
+        enabled: true
+        collect: true
+        only_exceptions: false
