--- a/.github/workflows/static-analysis.yaml
+++ b/.github/workflows/static-analysis.yaml
@@ -29,6 +29,9 @@ jobs:
       - name: Install dependencies
         uses: ramsey/composer-install@v3
 
+      - name: Install PHPUnit
+        run: vendor/bin/simple-phpunit install
+
       - name: Run PHPStan
         run: vendor/bin/phpstan analyse -c phpstan.neon --error-format=checkstyle | cs2pr
 
