--- a/phpstan.neon
+++ b/phpstan.neon
@@ -6,6 +6,7 @@ parameters:
         - src/Xutim/Bundle/AnalyticsBundle/src
         - src/Xutim/Bundle/CoreBundle/src
         - src/Xutim/Bundle/EventBundle/src
+        - src/Xutim/Bundle/EditorBundle/src
         - src/Xutim/Bundle/MediaBundle/src
         - src/Xutim/Bundle/RedirectBundle/src
         - src/Xutim/Bundle/SecurityBundle/src
