feat(core-bundle): add content draft model with publish and discard workflow

--- a/tests/Application/config/packages/xutim_core.yaml
+++ b/tests/Application/config/packages/xutim_core.yaml
@@ -26,6 +26,8 @@ xutim_core:
             class: App\Entity\Core\File
         media_folder:
             class: App\Entity\Core\MediaFolder
+        content_draft:
+            class: App\Entity\Core\ContentDraft
 
     filter_sets:
         front_thumb_16_9:
