feat(core-bundle): add editing presence detection with draft-change notification

--- a/tests/Application/config/routes.yaml
+++ b/tests/Application/config/routes.yaml
@@ -1,3 +1,6 @@
+xutim_analytics:
+    resource: '@XutimAnalyticsBundle/config/routes.php'
+
 xutim_redirect:
     resource: '@XutimRedirectBundle/config/routes.php'
 
